# chat-client

./: .flake8  README.md  pyproject.toml
app/: exceptions.py  gui.py  run.py
chat_client/: args.py  auth.py  connection.py  exceptions.py  gui.py  history.py  listen.py  queues.py  register.py  run.py  server.py  write.py
chat_client/messages/: __init__.py  listen.py  write.py
