[tool.poetry]
name = "chat-client"
version = "0.1.0"
description = ""
authors = ["savilard <vitaliyantonoff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_client"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"
anyio = "^3.6.2"
aiofiles = "^23.1.0"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
black = "^23.1.0"
mypy = "^1.1.1"
types-aiofiles = "^23.1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
