[tool.poetry]
name = "chat-client"
version = "0.1.0"
description = ""
authors = ["savilard <vitaliyantonoff@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chat_client"}]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.2"
aiofiles = "^23.1.0"
loguru = "^0.6.0"
async-timeout = "^4.0.2"
python-dotenv = "^1.0.0"
configargparse = "^1.5.3"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
black = "^23.1.0"
mypy = "^1.1.1"
types-aiofiles = "^23.1.0.0"

[tool.poetry.scripts]
start = "chat_client.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
